--- a/free/static/css/starter-template.css
+++ b/free/static/css/starter-template.css
@@ -23,15 +23,13 @@ li {
   font-size: 18px;
 }
 .bold {
-    display:grid;
+    display:flex;
     text-align: center;
     justify-content: center;
     align-items: center;
     font-size: 24px;
     font-weight: bold;
     white-space: nowrap;
-right
-
 }
 .textleft {
     grid-column: 2/7;
@@ -66,7 +64,7 @@ right
 }
 .content {
     grid-row: 1;
-    padding: 0 5px;
+    padding: 0 0px;
 }
 .rowflex {
     display: flex;
@@ -74,13 +72,13 @@ right
     flex-direction: row;
 }
 .row {
-    display:grid;
+    display:flex;
     grid-template-columns: repeat(12, 1fr);
 }
 
-.row2 {
-    grid-row:2;
-    text-align: center;
+.rowright {
+    display: flex;
+    justify-content: flex-end;
 }
 
 /* menu */
@@ -128,7 +126,11 @@ th {
 }
 
 td {
-    padding: 8px;
+    padding: 2px;
+}
+
+.lastcol {
+    overflow-wrap: anywhere;
 }
 
 th {
@@ -159,6 +161,3 @@ table {
     /*.contain {
         grid-column:3/6;
     }*/
-    .row2 {
-        text-align: left;
-    }
